--- a/index.html
+++ b/index.html
@@ -383,7 +383,8 @@
       </div>
     </section>
     <!-- acordian -->
-    <section class="py-5 overflow-hidden">
+    <section class="py-5  position-relative">
+      <div class="bule_blur position-absolute end-0 top-0"></div>
       <div class="custome_container container pt-lg-5 mt-xl-4">
         <h2 class="fw_600 fs_4xl clr_white text-center">FAQs</h2>
         <div class="accordion mt-md-5 pt-4" id="accordionExample">
