--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+      rel="shortcut icon"
+      href="./assets/img/png/mdi_bitcoin.ico"
+      type="image/x-icon"
+    />
     <!-- ---------AOS-ANIMATION-LINK----------- -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- my css link here -->
