--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </h2>
         <div class="row justify-content-center mt-4 mt-lg-5 pt-md-4">
           <div class="col-md-6 col-lg-4">
-            <div class="box_shadow_our_app text-center px-sm-4 h-100">
+            <div class="box_shadow_our_app text-center px-sm-4 h-100 transform_scale transition_4">
               <div class="py-md-5 py-4">
                 <div
                   class="icons_circel d-flex justify-content-center align-items-center mx-auto mt-4 opacity_1"
@@ -156,7 +156,7 @@
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mt-4 mt-md-0">
-            <div class="box_shadow_our_app text-center px-sm-4 h-100">
+            <div class="box_shadow_our_app text-center px-sm-4 h-100 transform_scale transition_4">
               <div class="py-md-5 py-4">
                 <div
                   class="icons_circel d-flex justify-content-center align-items-center mx-auto mt-4"
@@ -200,7 +200,7 @@
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mt-4 mt-lg-0">
-            <div class="box_shadow_our_app text-center px-sm-4 h-100">
+            <div class="box_shadow_our_app text-center px-sm-4 h-100 transform_scale transition_4">
               <div class="py-md-5 py-4">
                 <div
                   class="icons_circel d-flex justify-content-center align-items-center mx-auto mt-4"
@@ -251,7 +251,7 @@
                 sem et quisque lacus turpis aliquam.
               </p>
               <button
-                class="fw-bold fs_xsm clr_white btn_connect border-0 transition_6 mt-lg-5 mt-3"
+                class="fw-bold fs_xsm clr_white btn_connect border-0 transition_6 mt-lg-5 mt-3 transform_scale"
               >
                 Join Now
               </button>
@@ -277,7 +277,7 @@
         <div class="row py-sm-5 mt-lg-5 align-items-center">
           <div class="col-lg-6">
             <div class="pe-2">
-              <div class="simplicity_box_shadow">
+              <div class="simplicity_box_shadow transform_scale transition_4">
                 <div class="d-sm-flex">
                   <div
                     class="simplicity_icon d-flex justify-content-center align-items-center mx-auto mx-sm-0"
@@ -298,7 +298,7 @@
                   </div>
                 </div>
               </div>
-              <div class="simplicity_box_shadow mt-3">
+              <div class="simplicity_box_shadow mt-3 transform_scale transition_4">
                 <div class="d-sm-flex">
                   <div
                     class="simplicity_icon d-flex justify-content-center align-items-center mx-auto mx-sm-0"
@@ -395,13 +395,13 @@
           </div>
           <div class="col-md-5 mt-5">
             <div class="text-center text-md-start">
-              <img src="./assets/img/png/circel.png" alt="circel" />
+              <img class="transform_scale transition_4" src="./assets/img/png/circel.png" alt="circel" />
               <p class="fw_600 fs_2x4l clr_white mt-3 pt-1 mb-0">
                 Blockchain enabled backend platform for embedded devices
               </p>
             </div>
             <div class="mt-4 mt-md-5 text-center text-md-start">
-              <img
+              <img class="transform_scale transition_4"
                 src="./assets/img/png/client_circel.png"
                 alt="client_circel"
               />
@@ -576,7 +576,7 @@
           class="row justify-content-between align-items-center mt-5 pt-lg-5"
         >
           <div class="col-md-5">
-            <div class="engage_box_shadow">
+            <div class="engage_box_shadow transform_scale transition_4">
               <div class="d-flex">
                 <a href="#"
                   ><img src="./assets/img/svg/email.svg" alt="email"
@@ -655,7 +655,7 @@
                 </p>
               </div>
               <button
-                class="btn_send clr_white fw-bold fs_xsm mt-lg-5 mt-3 border-0"
+                class="btn_send clr_white fw-bold fs_xsm mt-lg-5 mt-3 border-0 transform_scale transition_4"
               >
                 Send
               </button>
