--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </section>
     </header>
     <!-- our app -->
-    <section class="py-5 position-relative mt-lg-5 overflow-hidden">
+    <section class="py-5 position-relative mt-lg-5 ">
       <div class="bule_blur position-absolute our_app_blur"></div>
       <div class="custome_container container py-md-5">
         <h2 class="fs_4x8l fw_600 clr_white text-center pb-sm-3">
@@ -232,7 +232,7 @@
       </div>
     </section>
     <!-- enable-device -->
-    <section class="py-5 position-relative overflow-hidden mt-md-5">
+    <section class="py-5 position-relative mt-md-5">
       <div class="bule_blur position-absolute enable_device_blur"></div>
       <div class="custome_container container">
         <div class="row align-items-center justify-content-center">
@@ -270,7 +270,7 @@
       </div>
     </section>
     <!-- simplicity -->
-    <section class="bg_img_implicity py-5 position-relative overflow-hidden">
+    <section class="bg_img_implicity py-5 position-relative">
       <div class="position-absolute bule_blur simplicity_left_blur"></div>
       <div class="position-absolute bule_blur simplicity_right_blur"></div>
       <div class="custome_container container py-md-5">
@@ -346,7 +346,7 @@
       </div>
     </section>
     <!-- low-code -->
-    <section class="py-5 position-relative overflow-hidden">
+    <section class="py-5 position-relative">
       <div class="position-absolute blue_2 low_code_blur"></div>
       <div class="custome_container container">
         <h2 class="fw_600 fs_4x8l clr_white text-center">
@@ -665,7 +665,7 @@
       </div>
     </section>
     <!-- footer -->
-    <footer class="pt-5 overflow-hidden mt-lg-4">
+    <footer class="pt-5 mt-lg-4">
       <div class="custome_container container pt-sm-5">
         <div class="row mt-md-5 justify-content-between">
           <div class="col-sm-6 col-lg-4">
